tweaked mine spawning, fixed some out of bounds errors, and added instructions

--- a/minesweeper/src/App.css
+++ b/minesweeper/src/App.css
@@ -37,6 +37,10 @@
 	}
 }
 
+.instructions {
+	text-align: left;
+}
+
 .field-table {
 	margin: auto;
 	border-collapse: collapse;
